--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "qunit": "~1.15.0",
     "d3": "*",
     "c3": "*",
-    "normalize.css": "~3.0.2"
+    "normalize.css": "~3.0.2",
+    "velocity": "~1.1.0",
+    "tether-tooltip": "~0.2.6"
   }
 }
