--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "ember-cli-heroku-deploy": "davewasmer/ember-cli-heroku-deploy"
+  },
   "devDependencies": {
     "broccoli-asset-rev": "^1.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
@@ -30,7 +33,6 @@
     "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5",
-    "ember-cli-heroku-deploy": "davewasmer/ember-cli-heroku-deploy"
+    "glob": "^4.0.5"
   }
 }
